[[bin]]
name = "kadugu"

[package]
name = "kadugu"
version = "0.0.2"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
anyhow = "1"
futures = "0.3.29"
libp2p = { version = "0.53.2", features = [ "full"] }
libp2p-stream = "0.1.0-alpha"
libp2p-quic = "0.10.2"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
libp2p-kad = { version = "0.45.3" }
async-compat = "0.2.3"
tracing = { version = "0.1.40"}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"
http = "1.1.0"
